# ikaruga

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ikaruga/: dol.h  runtime.h
include/ikaruga/audio/: audio.h
include/ikaruga/gx/: gx.h
include/ikaruga/hw/: gc_hw.h  os_defs.h
include/ikaruga/input/: input.h
src/: main.cpp
src/runtime/: func_table.cpp  memory.cpp  os_funcs.cpp  ppc_context.cpp
tools/dol_info/: main.cpp
